header+hero-section+about(with respo)

--- a/src/sass/_allModules.sass
+++ b/src/sass/_allModules.sass
@@ -1,1 +1,16 @@
+*
+    margin: 0
+    padding: 0
+@font-face
+    font-family: "Questrial"
+    src: url("../../public/fonts/Questrial-Regular.ttf")
+
+@font-face
+    font-family: "Roboto"
+    src: url("../../public/fonts/Roboto_Condensed-Regular.ttf")
+
+@font-face
+    font-family: "Noto"
+    src: url("../../public/fonts/NotoSans_Condensed-Regular.ttf")
+
 @import ./modules/home/_home
