--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -3,16 +3,20 @@
 
 $background-color: #ffffff
 $default-color: #0a0f14
+$nav-icons-color:#6c6f72
 $heading-color: #0f2943
 $accent-color: #e87532
 $surface-color: #ffffff
 $contrast-color: #ffffff
+$background-color2: #faf9fb
+$heading-color2: #794f3d
+$active:#e87532
 
 
-$colors: ("bg-color": $background-color , "default": $default-color , "heading":$heading-color , "accent":$accent-color ,"surface":$surface-color , "contrast":$contrast-color)
+$colors: ("bg-1": $background-color , "bg-2": $background-color2 , "default": $default-color , "heading":$heading-color , "heading2":$heading-color2 , "accent":$accent-color ,"surface":$surface-color , "contrast":$contrast-color , "nav-icons":$nav-icons-color , "active":$active) 
 
 $theme-colors: map-merge($colors , $theme-colors)
-$spacer: 1vh 
+$spacer: 5px 
 $my-spacers:(
     1: $spacer * 1,
     2: $spacer * 2,
@@ -26,7 +30,18 @@ $my-spacers:(
     10: $spacer * 10,
     11: $spacer * 11,
     12: $spacer * 12,
-    13: $spacer * 13,
+    14: $spacer * 14,
+    15: $spacer * 15,
+    16: $spacer * 16,
+    17: $spacer * 17,
+    18: $spacer * 18,
+    19: $spacer * 19,
+    20: $spacer * 20,
+    21: $spacer * 21,
+    22: $spacer * 22,
+    23: $spacer * 23,
+    24: $spacer * 24,
+    25: $spacer * 13,
 )
 
 
