--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -11,9 +11,11 @@ $contrast-color: #ffffff
 $background-color2: #faf9fb
 $heading-color2: #794f3d
 $active:#e87532
+$background-color3: #f5e9debb
+$accordion-button-focus-border-color: #e87532
 
 
-$colors: ("bg-1": $background-color , "bg-2": $background-color2 , "default": $default-color , "heading":$heading-color , "heading2":$heading-color2 , "accent":$accent-color ,"surface":$surface-color , "contrast":$contrast-color , "nav-icons":$nav-icons-color , "active":$active) 
+$colors: ("bg-1": $background-color , "bg-2": $background-color2 , "bg-3": $background-color3 , "default": $default-color , "heading":$heading-color , "heading2":$heading-color2 , "accent":$accent-color ,"surface":$surface-color , "contrast":$contrast-color , "nav-icons":$nav-icons-color , "active":$active , "border-fcs":$accordion-button-focus-border-color) 
 
 $theme-colors: map-merge($colors , $theme-colors)
 $spacer: 5px 
