--- a/src/sass/modules/home/home/_Contact.sass
+++ b/src/sass/modules/home/home/_Contact.sass
@@ -1,8 +1,8 @@
-.contact
-    display: flex
-    padding: 50px 100px
+.contact-section
+    padding: 50px 
     background-color: $background-color2 
-    gap: 80px
+    .contact
+        display: flex
     .contact-left
         width: 50%
         display: flex
@@ -86,14 +86,17 @@
                     width: 100%
                     border-radius: 10px
 @media (max-width:480px) 
-    .contact
-        flex-direction: column
-        padding: 50px 10px
+    .contact-section
+        padding-block: 50px 
+        padding-inline: 0px 
         width: 100%
-        align-items: center
         gap: 20px
+        .contact
+            flex-direction: column
+            align-items: center
         .contact-left
             width: 100%
             align-items: start 
         .contact-right
+            padding-inline: 10px
             width: 100%
