--- a/src/sass/modules/home/home/_Header.sass
+++ b/src/sass/modules/home/home/_Header.sass
@@ -26,7 +26,7 @@ header
         nav
             background-color: white !important
             width: 80% !important
-            height: 80vh !important
+            // height: 0vh !important
             right: -200% !important
             position: fixed !important
             flex-direction: column
