--- a/src/sass/modules/home/home/_Services.sass
+++ b/src/sass/modules/home/home/_Services.sass
@@ -1,7 +1,7 @@
 *
     padding: 0
     margin: 0
-.title
+.s-title
     h2
         font-family: "Questrial" , sans-serif
         font-size: 42px
@@ -34,20 +34,21 @@
                 p
                     font-family: "Roboto"
                     font-size: 14px
-@media (max-with:480px)
+@media (max-width:480px)
     .services-content
         width: 100% !important
     .our-services
-        padding-inline: 0 !important
+        display: flex
+        flex-direction: column
         width: 100% !important
     .s-left 
         width: 100% !important
         padding-inline: 0 !important
-        text-align: center
         h2
             width: 100% !important
-            text-align: center
-        .btn
+        p
+            width: 100% !important
+        a
             width: 100% !important
     .s-right
         width: 100% !important
@@ -55,6 +56,7 @@
         .my-grid
             width: 100% !important
             .grid-item
+                width: 100% !important
                 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.042), 0 6px 20px 0 rgba(0, 0, 0, 0.103)
                 h3
                     font-family: "Questrial" , sans-serif
