btn back to top

--- a/src/sass/modules/home/home/_Footer.sass
+++ b/src/sass/modules/home/home/_Footer.sass
@@ -12,3 +12,23 @@ footer
     .credits
         font-family: "Roboto"
         font-size: 13px
+// back to top
+#btt
+    position: fixed
+    bottom: 15px
+    right: 15px
+    max-width: 48px
+    border: none
+    font-size: 26px
+    padding: 6px
+    border-radius: 50%
+    position: fixed
+    background-color: $accent-color
+    width: 100%
+    transition: all 0.4s
+    i
+        color: white
+
+#btt
+    &:hover
+        opacity: 50%
