--- a/public/css/app.css
+++ b/public/css/app.css
@@ -20944,6 +20944,28 @@ footer .credits {
   font-size: 13px;
 }
 
+#btt {
+  position: fixed;
+  bottom: 15px;
+  right: 15px;
+  max-width: 48px;
+  border: none;
+  font-size: 26px;
+  padding: 6px;
+  border-radius: 50%;
+  position: fixed;
+  background-color: #e87532;
+  width: 100%;
+  transition: all 0.4s;
+}
+#btt i {
+  color: white;
+}
+
+#btt:hover {
+  opacity: 50%;
+}
+
 header {
   z-index: 1000000000000;
   width: 100%;
